fixed alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,8 @@ body {
 header {
     width:  100%;
     height: 75px;
-    padding: 20px;
+    margin-bottom: 50px;
+    padding: 5px;
     background-color: #FAFAFA;
 }
 
@@ -54,6 +55,7 @@ span {
     padding: 8px 20px;
     border: none;
     float: right;
+    margin: 0.67em 0;
 }
 
 #reset-btn:hover {
@@ -78,14 +80,16 @@ h2 {
     font-size: 18px;
     color: #3fbfd2;
 }
+
 .players {
-    margin-top: 70px;
-    margin-left: 20px;
+    width: 240px;
+    margin: 0 auto;
     text-align: center;
 }
 
 .player-one {
     float: left;
+    margin-right: 50px;
 }
 
 .player-two-bottom {
@@ -94,10 +98,6 @@ h2 {
 /***********************
     Game Styles
 ************************/
-
-.game {
-    float: left;
-}
 
 .top-1, 
 .top-2,
@@ -144,9 +144,9 @@ h2 {
 /*iPhone portrait*/
 
 @media only screen and (min-width: 320px) {
- /*   body {
+    body {
         color: purple;
-    }*/
+    }
 
 /***********************
     Header
@@ -172,10 +172,9 @@ h2 {
         width: 300px;
         margin-top: 50px;
         margin-bottom: 30px;
-    }
-
-    .wrapper { 
-        margin-left: 40px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .row-top,
@@ -230,7 +229,7 @@ h2 {
     body {
         color: red;
     }
-       /***********************
+/***********************
      Players
 ************************/    
 
